# wacksy

./: CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  cargo_check.yml  cargo_test.yml  cd.yml  ci.yml  release-plz.yml  validate_wacz.yml
parser/: Cargo.toml  example.warc  parsing_test.txt
parser/src/: gzparser.rs  main.rs  warcparser.rs
src/: datapackage.rs  indexer.rs  lib.rs  main.rs
src/indexer/: indexing_errors.rs  page_record.rs  record_content_type.rs  record_digest.rs  record_status.rs  record_timestamp.rs  record_url.rs  surt.rs  warc_filename.rs
tests/: integration_test.rs
tests/schemas/: datapackage-digest.schema.json  page-record.schema.json
tests/wacz_example/: datapackage-digest.json  datapackage.json
tests/wacz_example/indexes/: index.cdxj
tests/wacz_example/pages/: pages.jsonl
