[package]
name = "wacksy"
version = "0.1.3"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/bodleian/wacksy"
documentation = "https://docs.rs/wacksy/latest/wacksy/"
description = "Experimental library for writing WACZ achives."
keywords = ["save-the-internet", "web-archive", "wacz", "warc", "cdxj"]
categories = ["encoding"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
chrono = "0.4.41"
flate2 = "1.1.5"
rawzip = "0.4.1"
sha2 = "0.10.9"

[dev-dependencies]
pretty_assertions = "1"
jsonschema = { version = "0.33.0", default-features = false, features = [
    "resolve-file",
] }
serde_json = "1.0.143"
serde = { version = "1.0.218", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Enable warnings for main lint groups
cargo = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
# Use explicit syntax
implicit_return = { level = "warn", priority = 1 }
needless_return = { level = "allow", priority = 1 }
needless_continue = { level = "allow", priority = 1 }
redundant_else = { level = "allow", priority = 1 }
# Instead of opting-out of restriction lints,
# I should pick the ones I want to actually apply
std_instead_of_core = { level = "allow", priority = 1 }
missing_assert_message = { level = "warn", priority = 1 }
min_ident_chars = { level = "warn", priority = 1 }
unused_trait_names = { level = "warn", priority = 1 }
# Enable this when adding error checking
# unwrap_used = { level = "warn", priority = 1 }

[profile.release]
# Magic incantations to produce speedier release builds
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
